MDEV-29142 : Assertion `!_current_thd()' failed in void destroy_background_thd(THD*)

In test user has set WSREP_ON=OFF this causes streaming replication
recovery to fail and this caused call to unireg_abort(). However,
this call is not necessary and we can let transaction to fail. Naturally,
if real user does this he needs to bootstrap his cluster.